--- a/style.css
+++ b/style.css
@@ -686,6 +686,73 @@ button:hover {
     color: #fff;
 }
 @media screen and (max-width:800px) {
+  
+/* ----------------------------------- */
+
+    .tog {
+        display: flex;
+
+    }
+
+    .nav {
+        display: block;
+        height: auto;
+        position:static;
+        
+
+    }
+    .title a{
+        color: rgb(255, 255, 255);
+        font-size: 98%;
+    }
+    .tog {
+        position: absolute;
+        top: 17px;
+        right: -20px;
+
+    }
+
+    .list {
+        flex-direction: column;
+        display: none;
+        margin-top: 25px;
+        text-align: center;
+        gap: 0;
+    }
+
+
+    .list .item {
+        width: 100%;
+        background-color: white;
+
+
+
+    }
+
+    .item a {
+        width: 100%;
+        background-color:white;
+        display: block;
+        color: black;
+        padding: 8px;
+    }
+
+    .item a:hover {
+        background-color: rgb(248, 248, 248);
+        color: brown;
+    }
+    .togle{
+        display: flex;
+        position: absolute;
+        width: 90%;
+        top: 40px;
+    }
+
+
+
+/* --------------------------- */
+
+
     .nav-container{
         width: 90%;
         margin: 1rem auto;
@@ -718,10 +785,7 @@ button:hover {
        font-size: 17px;
     }
     
-.list {
-    display: none;
-    
-}
+
 .container-2{
     width: 90%;
     flex-direction: column;
@@ -933,4 +997,5 @@ button:hover {
    flex-direction: column;
    justify-content: center;
 }
+
 }
