--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
 
 
 .tog {
-    background-color: rgb(212, 212, 46);
+    background-color: rgba(255, 255, 255, 0);
     height: 30px;
     width: 30px;
     display: none;
@@ -76,13 +76,11 @@
 .tog p {
     height: 3px;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 
 }
 
-.tog:hover {
-    background-color: rgb(243, 243, 162);
-}
+
 .res-btn{
     font-size: 20px;
     padding: 6px 25px;
@@ -108,6 +106,7 @@
     background-image: url("Assets/img3.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    object-fit: cover;
 
 }
 
@@ -751,7 +750,7 @@ button:hover {
 
 
 /* --------------------------- */
-
+    
 
     .nav-container{
         width: 90%;
